_ndla_timeline.scss: Adds max-width for images to avoid too large images

--- a/src/sass/templates/_ndla_timeline.scss
+++ b/src/sass/templates/_ndla_timeline.scss
@@ -714,6 +714,7 @@ blockquote {
 
 .page_content img {
   width: auto;
+  max-width: 100%;
 
   &.left-image {
     padding-right: 25px;
